GL/src/test/deca/context/valid/deca_sans_objet/declaration.deca
// Description:
//    test de déclaration de 2 variables
//
// Resultats:
//    Ok
//
// Historique:
//    cree le 01/01/2026

{
        int x ;
        boolean y ;
}