GL/src/test/deca/context/invalid/deca_sans_objet/if.deca
// Description :
// test de déclaration des variables
//
// Resultats :
// Ligne 11: type de condition incompatible
//
// Historique:
//    cree le 01/01/2026

{
  if (1) {
  }
}